@@ -130,27 +130,6 @@ public class SessionInternalFrame extends BaseSessionInternalFrame
 
 		addInternalFrameListener(new InternalFrameAdapter()
 		{
-			// This is to fix a problem with the JDK (up to version 1.3)
-			// where focus events were not generated correctly. The sympton
-			// is being unable to key into the text entry field unless you click
-			// elsewhere after focus is gained by the internal frame.
-			// See bug ID 4309079 on the JavaSoft bug parade (plus others).
-			public void internalFrameActivated(InternalFrameEvent evt)
-			{
-				Window window = SwingUtilities.windowForComponent(
-										SessionInternalFrame.this._sessionPanel.getSQLPanel());
-				Component focusOwner = (window != null)
-											? window.getFocusOwner() : null;
-				if (focusOwner != null)
-				{
-					FocusEvent lost = new FocusEvent(focusOwner, FocusEvent.FOCUS_LOST);
-					FocusEvent gained = new FocusEvent(focusOwner, FocusEvent.FOCUS_GAINED);
-					window.dispatchEvent(lost);
-					window.dispatchEvent(gained);
-					window.dispatchEvent(lost);
-					focusOwner.requestFocus();
-				}
-			}
 			public void internalFrameClosing(InternalFrameEvent evt)
 			{
                 if (!session.isfinishedLoading()) {                         
