@@ -6,6 +6,12 @@ SQuirreL SQL Client Change Log
 
 Bug-Fixes:
 
+2092902: Focus remains on hidden session window for Alt-Arrow.  Removed code which was a 
+work-around for a bug in java 1.3, that has since been fixed and was actually producing a 
+bug seen in java5 and java6, where the Alt-RightArrow key shortcut switched session windows 
+into the foreground without giving them focus.  Thanks goes to Johnathan James for the 
+bug-fix.
+
 2013346: export csv with option "carriage return + linefeed"
 
 2.6.6 (6/13/2008)
